--- a/.env
+++ b/.env
@@ -7,13 +7,13 @@ ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=43200
 
 # Telegram Bot
-TELEGRAM_BOT_TOKEN=your-telegram-bot-token
-TELEGRAM_BOT_USERNAME=your-bot-username
+TELEGRAM_BOT_TOKEN=8458118092:AAFHL9fTS7TDvjSZFhLeL5dIvFvW92bhK4U
+TELEGRAM_BOT_USERNAME=inbazar_robot
 
 # Supabase
-SUPABASE_URL=https://your-project.supabase.co
-SUPABASE_KEY=your-supabase-anon-key
-SUPABASE_BUCKET=clothing-images
+SUPABASE_URL=https://rrgpeudxachhhogktnev.supabase.co
+SUPABASE_KEY=sbp_b7bb50f48c0833b6475f9d12d88f6269672ee2db
+SUPABASE_BUCKET=inbazarimages
 
 # Admin
 ADMIN_TELEGRAM_ID=your-telegram-id
