--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Database
-DATABASE_URL=postgresql://username:password@host:port/database
+DATABASE_URL=postgresql://postgres:ySuDQHRZgKCMShICDlhpJJEmJDyuBELc@tramway.proxy.rlwy.net:15563/railway
 
 # JWT
 SECRET_KEY=your-super-secret-jwt-key-here
